# llama.cpp-wrapper

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml
assets/: llama_cpp.runtime.any.runtime.native.llama.cpp.nuspec.tpl
cmake/: FixCompileFlags.cmake  dotnet.cmake
src/examples/: main.cpp
src/examples/cli/: CMakeLists.txt  main.cpp
src/examples/server/: CMakeLists.txt
src/examples/server/assets/: CMakeLists.txt  Dockerfile  script.js
src/examples/server/assets/nginx/: nginx.conf.template  startup.sh
src/examples/server/exe/: App.cpp  CMakeLists.txt
src/examples/server/lib/: CMakeLists.txt
src/examples/server/lib/impl/llama-cpp/server/: ErrorHandler.cpp
src/examples/server/lib/impl/llama-cpp/server/controller/: MyController.cpp  PromptController.cpp  StaticController.cpp
src/examples/server/lib/impl/llama-cpp/services/: ChatService.cpp
src/examples/server/lib/impl/oatpp-swagger/: EmbeddedResources.cpp
src/examples/server/lib/include/public/llama-cpp/server/: AppComponent.hpp  ErrorHandler.hpp  SwaggerComponent.hpp
src/examples/server/lib/include/public/llama-cpp/server/controller/: MyController.hpp  PromptController.hpp  StaticController.hpp  SwaggerApiController.hpp
src/examples/server/lib/include/public/llama-cpp/server/dto/: MyDTOs.hpp  ParamsDto.hpp  PromptDto.hpp  StatusDto.hpp
src/examples/server/lib/include/public/llama-cpp/server/services/: ChatService.hpp
src/examples/server/lib/include/public/oatpp-swagger/: EmbeddedResources.hpp
src/lib/: CMakeLists.txt  exports.def
src/lib/impl/llama-cpp/: llama.cpp  utils.cpp  wrapper.cpp
src/lib/include/public/llama-cpp/: llama.hpp  models.hpp  utils.hpp  wrapper.h
src/lib/include/public/llama-cpp/compat/: ostream_joiner  semaphore  transform_iterator
utilities/: bootstrap.sh  build.sh  vercmp.sh
